Assembly Browser: Displayed members for enums and interfaces in tooltip, version for assemblies Dependency Browser: Displayed assembly full name in tooltip for graph nodes

--- a/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -65,6 +65,10 @@
                                 Grid.ColumnSpan="2"
                                 Margin="8, 0, 8, 3">
                         <TextBlock Margin="0, 3">
+                            <Run Text="Version: " FontStyle="Italic"/>
+                            <TextBlock Text="{Binding Version}"/>
+                        </TextBlock>                        
+                        <TextBlock Margin="0, 3">
                             <Run Text="Exported types: " FontStyle="Italic"/>
                             <TextBlock Text="{Binding ExportedTypesCount}"/>
                         </TextBlock>
