--- a/sources/AssemblyVisualizer/DependencyBrowser/DependencyBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/DependencyBrowser/DependencyBrowserWindow.xaml
@@ -8,7 +8,9 @@
         xmlns:Converters="clr-namespace:AssemblyVisualizer.Controls.Graph.Converters"
         Title="Dependency Browser" 
         Height="600" 
-        Width="800">
+        Width="800"
+        MinHeight="200"
+        MinWidth="460">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
